--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -57,7 +57,7 @@ const { remarkPluginFrontmatter } = await entry.render()
         <PostMetadata published={published} tags={tags} category={category} hideTagsForMobile={true} class="mb-4"></PostMetadata>
 
         <!-- description -->
-        <div class:list={["transition text-75 mb-3.5 pr-4", {"line-clamp-2 md:line-clamp-1": !description}]}>
+        <div class:list={["transition text-75 dark:text-white/75 mb-3.5 pr-4", {"line-clamp-2 md:line-clamp-1": !description}]}>
             { description || remarkPluginFrontmatter.excerpt }
         </div>
 
@@ -92,7 +92,7 @@ const { remarkPluginFrontmatter } = await entry.render()
          hover:bg-[var(--enter-btn-bg-hover)] active:bg-[var(--enter-btn-bg-active)] active:scale-95
         ">
             <Icon name="material-symbols:chevron-right-rounded"
-                  class="transition text-[var(--primary)] text-4xl mx-auto">
+                  class="transition text-[var(--primary)] text-3xl mx-auto">
             </Icon>
         </a>
     }
